# eecs583-static-estimation

./: .gitignore  README.md  Vagrantfile  install.sh
classification/: lstm.py  lstm_utils.py  many_csv_small_N.py  single_csv.py  wc_lstm.py
scripts/: benchmark_list.csv  benchmark_list_poly.csv  combine_poly.py  combine_ptr.py  extract_features.sh  fix_omnet.cpp  optimize_dynamic.sh  optimize_static.sh  paths.sh  paths_SAMPLE.sh  run.sh  run_all.m  run_all_lstm.m  run_fortran_lstm.sh  run_lstm.sh  run_optimized_lstm.sh  run_path_warmth.sh  valgrind_lstm
scripts/args/: astar.csv  bwaves.csv  bzip2.csv  correlation.csv  dealII.csv  gcc.csv  gemsfdtd.csv  gmm.csv  gobmk.csv  gromacs.csv  h264.csv  lbm.csv  leslie3d.csv  libquantum.csv  mcf.csv  milc.csv  namd.csv  perlbench.csv  polyfortran.csv  povray.csv  sjeng.csv  soplex.csv  spec_benchmarks.csv  spec_benchmarks_not_working.csv  sphinx3.csv  stemmer.csv  xalancbmk.csv  zeusmp.csv
simple_tests/wc/: compile.sh  input.txt  lstm_compile.sh
static-estimation-pass/: CMakeLists.txt  README.md  rebuild.sh
static-estimation-pass/static-estimation/: CMakeLists.txt  StaticEstimation.cpp
static-estimation-pass/static-estimation/include/: BLInstrumentation.h  FeatureExtractor.h  OpStatCounter.h
static-estimation-pass/static-estimation/lib/: BLInstrumentation.cpp  FeatureExtractor.cpp  FeatureExtractorHarness.cpp  LSTMProfileSpoofer.cpp  LSTMStaticEstimator.cpp  LSTMStaticProfiler.cpp  OpStatCounter.cpp  PassProfiler.cpp  StaticEstimation.cpp  StaticEstimator.cpp
